<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_1"
            android:text="@string/verify_phone_number"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/color_accent"/>

    <TextView
            android:text="@string/whatsapp_will_send_a_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_2"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tv_1"
            app:layout_constraintStart_toStartOf="@+id/tv_1"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_1"
            android:textColor="@color/primary_text"
            android:textSize="16sp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/et_phone_number_login"
            app:layout_constraintStart_toStartOf="@+id/tv_2"
            app:layout_constraintEnd_toEndOf="@+id/tv_2"
            android:hint="@string/phone_number"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_2"
            android:textAlignment="center"
            android:autofillHints="" tools:targetApi="o"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_code_login"
            app:layout_constraintStart_toStartOf="@+id/et_phone_number_login"
            app:layout_constraintEnd_toEndOf="@+id/et_phone_number_login"
            android:hint="@string/code"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_number_login"
            android:autofillHints="" tools:targetApi="o"/>

    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_next_login"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/color_accent_light"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:minHeight="56dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="16sp"/>
</android.support.constraint.ConstraintLayout>