<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.NewUserActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:textAlignment="center"
            android:text="@string/info_profile"
            android:textColor="@color/color_primary"
            android:textSize="18sp"
            android:textStyle="bold"/>

    <TextView
            android:text="@string/please_add_a_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:textColor="@color/secondary_text"
            android:textAlignment="center"
            android:textSize="16sp"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_new_user_photo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:civ_border_width="0dp"
            android:src="@drawable/placeholder_profile"
            android:scaleType="centerCrop"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:ems="10"
            android:id="@+id/et_new_user_name"
            app:layout_constraintTop_toTopOf="@+id/iv_new_user_photo"
            app:layout_constraintBottom_toBottomOf="@+id/iv_new_user_photo"
            app:layout_constraintStart_toEndOf="@+id/iv_new_user_photo"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:hint="@string/write_your_name"
            android:importantForAutofill="no"
            tools:targetApi="o"/>

    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_next_new_user"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/color_accent_light"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:minHeight="56dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="16sp"/>
</android.support.constraint.ConstraintLayout>