<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_gallery"
            android:id="@+id/fab_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/fab_camera"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:focusable="true"
            app:elevation="0dp"
            app:backgroundTint="@color/purple_button"/>

    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_camera"
            android:id="@+id/fab_camera"
            app:layout_constraintStart_toEndOf="@+id/fab_gallery"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/fab_delete"
            app:layout_constraintBottom_toBottomOf="@+id/fab_gallery"
            app:layout_constraintTop_toTopOf="@+id/fab_gallery"
            android:focusable="true"
            app:elevation="0dp"
            app:backgroundTint="@color/orange_button"/>

    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_delete"
            android:id="@+id/fab_delete"
            app:layout_constraintStart_toEndOf="@+id/fab_camera"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fab_camera"
            app:layout_constraintBottom_toBottomOf="@+id/fab_camera"
            android:focusable="true"
            app:elevation="0dp"
            app:backgroundTint="@color/red_button"/>

    <TextView
            android:text="@string/profile_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

    <TextView
            android:text="@string/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/fab_gallery"
            app:layout_constraintEnd_toEndOf="@+id/fab_gallery"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fab_gallery"/>

    <TextView
            android:text="@string/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/fab_camera"
            app:layout_constraintEnd_toEndOf="@+id/fab_camera"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fab_camera"/>

    <TextView
            android:text="@string/delete_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/fab_delete"
            app:layout_constraintEnd_toEndOf="@+id/fab_delete"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fab_delete"/>
</android.support.constraint.ConstraintLayout>