<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ProfileActivity"
        android:background="@color/gray_background">

    <android.support.v7.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            android:theme="@style/ToolbarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="@string/profile"
            android:elevation="4dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_user_photo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:civ_border_width="0dp"
            android:src="@drawable/placeholder_profile"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_profile"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/white"
            android:elevation="1dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_photo">

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/tv_name_user"
                android:layout_weight="9"
                tools:text="Christian Meazza"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                android:gravity="center_vertical"/>

        <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_edit"
                android:id="@+id/ib_edit_name"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <TextView
            android:text="@string/profile_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textColor="@color/secondary_text"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>

    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_camera"
            android:id="@+id/fab_photo_profile"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user_photo"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_user_photo"
            app:backgroundTint="@color/color_accent"
            app:fabSize="normal"
            android:focusable="true"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:background="@android:color/white"
            android:elevation="1dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp">

        <TextView
                android:text="@string/info_and_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="1"
                android:textColor="@color/color_accent"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_phone_number"
                android:layout_weight="1"
                tools:text="+57 301 6430690"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                android:paddingBottom="16dp"
                android:paddingTop="8dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>